# cpu

./: README.md  alu-fast.circ  bad-apple-setup.asm  build.sh  cpu.circ  main.asm  tabulka.xlsx  test.circ
badapple/: Cargo.toml  README.md
badapple/src/: main.rs
emu/: Cargo.toml  README.md
emu/src/: cpu.rs  main.rs  registers.rs  winit_app.rs
