[package]
name = "emu"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = false
debug = 1

[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold", "-C", "symbol-mangling-version=v0"]
#rustflags = ["-C", "target-cpu=native", "-C", "symbol-mangling-version=v0"]
#rustflags = ["-C", "profile-generate=./target/pgo-profiles"]

[dependencies]
femtovg = "0.9.1"
glutin = "0.32.0"
raw-window-handle = "0.5.0"
winit = {  version = "0.30.3" }
glutin-winit = "0.5.0"
softbuffer = "0.4.4"
signal-hook = "0.3.17"
dynasmrt = "2.0.0"